Changed models, wrote home/tweet/user controllers, wrote views/viewModels/bindingModels for aforementioned controllers

--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/SendCode.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.Web.Models.SendCodeViewModel
+﻿@model Twitter.Web.Models.ViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
