--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/VerifyCode.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.Web.Models.VerifyCodeViewModel
+﻿@model Twitter.Web.Models.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
