--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.Web.Models.ExternalLoginListViewModel
+﻿@model Twitter.Web.Models.ViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
