--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model Twitter.Web.Models.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
