--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/ForgotPassword.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.Web.Models.ForgotPasswordViewModel
+﻿@model Twitter.Web.Models.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
