--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/Register.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.Web.Models.RegisterViewModel
+﻿@model Twitter.Web.Models.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
