--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/ResetPassword.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model Twitter.Web.Models.ResetPasswordViewModel
+﻿@model Twitter.Web.Models.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
