Added tweet controls: reply/favorite/retweet; Added user profile page + tweets/retweets/favorites/following/followers

--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Home/Index.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Home/Index.cshtml
@@ -12,9 +12,8 @@
         }
         else
         {
-            Html.RenderPartial("_PostTweet");
+            Html.RenderPartial("~/Views/Tweets/_PostTweet.cshtml");
             Html.RenderPartial("_Index");
         }
     }
 </section>
-
