Added notifications for reply/retweet/favorite/follow. Added edit profile page

--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Layout.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Layout.cshtml
@@ -43,6 +43,17 @@
                                htmlAttributes: null
                                )
                             </li>
+                            <li>
+                                @*How can I get this to display the notifications count?*@
+
+                                @Html.ActionLink(
+                               linkText: "Notifications",
+                               actionName: "All",
+                               controllerName: "Notifications",
+                               routeValues: null,
+                               htmlAttributes: null
+                               )
+                            </li>
                         }
                     }
                 </ul>
