--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/UserProfile.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/UserProfile.cshtml
@@ -35,6 +35,20 @@
 
         <div>
             <h2>@Model.UserName</h2>
+
+            @if (this.User.Identity.Name == Model.UserName)
+            {
+                <h4>
+                    @Html.ActionLink(
+                               linkText: "Edit Profile",
+                               actionName: "Index",
+                               controllerName: "Manage",
+                               routeValues: new { username = username },
+                               htmlAttributes: null
+                               )
+                </h4>
+            }
+
         </div>
     </div>
     <div>
