--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/Register.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/Register.cshtml
@@ -30,6 +30,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="col-md-2 control-label">Avatar URL</label>
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.PictureUrl, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
