--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Manage/ChangePassword.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Manage/ChangePassword.cshtml
@@ -1,14 +1,13 @@
-﻿@model Twitter.Web.Models.ChangePasswordViewModel
+﻿@model Twitter.Web.Models.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
