--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_PostReply.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_PostReply.cshtml
@@ -1,10 +1,22 @@
-﻿<div id="create-tweet-box">
+﻿@if (this.TempData["postReplyError"] != null)
+{
+    <div class="text-danger">
+        <h5>@this.TempData["postReplyError"]</h5>
+    </div>
+}
+
+<div id="create-tweet-box">
     @using (Html.BeginForm(
-                actionName: "Reply", controllerName: "Tweets", method: FormMethod.Post,
-                routeValues: new { id = Model }, htmlAttributes: new { @class = "form-horizontal" }))
+            actionName: "Reply", controllerName: "Tweets", method: FormMethod.Post,
+            routeValues: new { id = Model }, htmlAttributes: new { @class = "form-horizontal" }))
     {
+        @Html.ValidationSummary("", new { @class = "text-danger" })
         <textarea class="form-control" rows="3" name="content" placeholder="Tweet your reply here"></textarea>
         @Html.AntiForgeryToken()
         <input type="submit" class="btn btn-info" value="Send Reply" />
     }
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
