--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Manage/ChangeAvatar.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Manage/ChangeAvatar.cshtml
@@ -12,7 +12,8 @@
     <div class="form-group">
         <label class="col-md-2 control-label">Avatar URL</label>
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.PictureUrl, new { @class = "form-control" })
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            @Html.EditorFor(m => m.PictureUrl, new { @class = "form-control" })
         </div></div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
