--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_PostTweet.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_PostTweet.cshtml
@@ -1,6 +1,7 @@
 ﻿<div id="create-tweet-box">
     @using (Html.BeginForm("Tweet", "Tweets", FormMethod.Post, new { @class = "form-horizontal" }))
-    {        
+    {
+        @Html.ValidationSummary("", new { @class = "text-danger" })
         <textarea class="form-control" rows="3" name="content" placeholder="Tweet your mind"></textarea>
         @Html.AntiForgeryToken()
         <input type="submit" class="btn btn-info" value="Tweet" />
