--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/UserProfile.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/UserProfile.cshtml
@@ -31,6 +31,13 @@
                     routeValues: new { username = username }, htmlAttributes: null)
                 </div>
             }
+            else
+            {
+                <div class="controls">
+                    @Html.ActionLink(linkText: "Unfollow", actionName: "Unfollow", controllerName: "Users",
+                    routeValues: new { username = username }, htmlAttributes: null)
+                </div>
+            }
         }
 
         <div>
@@ -52,9 +59,10 @@
         </div>
     </div>
     <div>
-        <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
         @{
             Html.RenderPartial("~/Views/Tweets/_Tweet.cshtml", Model.Tweets);
         }
     </div>
 </div>
+
+@Scripts.Render("~/bundles/jquery")
