All childnodes of the root tweet now show on the reply page. Fixed a bug in the reply controller

--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Home/Index.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Home/Index.cshtml
@@ -23,6 +23,12 @@ else if (this.TempData["favoriteTweetSuccess"] != null)
         <h5>@this.TempData["favoriteTweetSuccess"]</h5>
     </div>
 }
+else if (this.TempData["favoriteTweetError"] != null)
+{
+    <div class="text-danger">
+        <h5>@this.TempData["favoriteTweetError"]</h5>
+    </div>
+}
 else if (this.TempData["retweetTweetSuccess"] != null)
 {
     <div class="text-success">
