--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_TweetPage.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_TweetPage.cshtml
@@ -12,6 +12,9 @@
     <div>@Html.Partial("_Tweet", Model)</div>
     <h3>Replies</h3>
     <div>
-        @Html.Partial("_Tweet", Model.First().RepliesToOriginal)
+        @if (Model.FirstOrDefault() != null)
+        {
+            Html.Partial("_Tweet", Model.FirstOrDefault().RepliesToOriginal);
+        }
     </div>
 </div>
