--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Index.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Index.cshtml
@@ -2,7 +2,22 @@
 @using PagedList.Mvc;
 
 @{
-    Html.RenderPartial("~/Views/Tweets/_Tweet.cshtml");
-
+    @Html.DisplayForModel();
     @Html.PagedListPager(Model, page => Url.Action("Index", new { page }));
 }
+
+@*@section scripts{
+    @Scripts.Render("~/bundles/signalr");
+    <script src="/signalr/hubs"></script>
+    <script>
+        $(document).ready(function () {
+            var tweetsHub = $.connection.tweets;
+
+            tweetsHub.client.updateFeed = function (tweet) {
+                $('#tweets-container')
+            }
+
+            $.connection.hub.start();
+        })
+    </script>
+}*@
