--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_FavoriteTweets.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_FavoriteTweets.cshtml
@@ -7,6 +7,6 @@
     }
     else
     {
-        Html.RenderPartial("~/Views/Tweets/_Tweet.cshtml");
+        @Html.DisplayForModel()
     }    
 </div>
