--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_Followers.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_Followers.cshtml
@@ -13,7 +13,7 @@
                         </div>
                         <h3 class="col-md-1">
                             @{
-                                var username = item.UserName.Substring(0, item.UserName.IndexOf('@'));
+                                var username = item.UserName;
                             }
 
                             @Html.ActionLink(
