--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_UserIndex.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_UserIndex.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewBag.Title = "Feed";
 
-    Html.RenderPartial("~/Views/Tweets/_Tweet.cshtml");
+    @Html.DisplayForModel()
 
     @Html.PagedListPager(Model, page => Url.Action("Index", new { page }));
 }
