--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_UserIndex.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_UserIndex.cshtml
@@ -6,5 +6,5 @@
 
     @Html.DisplayForModel()
 
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page }));
+    @Html.PagedListPager(Model, page => Url.Action("_UserIndex", new { page }));
 }
