--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Layout.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Layout.cshtml
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/Custom.css" rel="stylesheet" />
 
 </head>
-<body>
+<body id="bootstrap-overrides">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -58,8 +59,10 @@
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
-    </div>
-    <div class="container body-content">
+    </div>   
+
+    <div class="container body-content">        
+
         @RenderBody()
         <hr />       
     </div>
